# tgBotForAutoSending

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
admin/: auth.py  main.py
admin/routers/: broadcast.py  dashboard.py  exports.py  settings.py  subscriptions.py  users.py
admin/templates/: base.html  broadcast.html  dashboard.html  login.html  settings.html  subscriptions.html  user_message.html  users.html
bot/: main.py
bot/handlers/: channel_events.py  errors.py  start.py
bot/keyboards/: inline.py
bot/middlewares/: db.py
bot/tasks/: broadcast.py
core/: config.py  database.py
core/crud/: broadcasts.py  channel_events.py  settings.py  users.py
core/models/: __init__.py  broadcast.py  channel_event.py  setting.py  user.py
docker/: Dockerfile.bot  nginx.conf
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_is_subscribed.py  0003_add_bot_token_to_users.py  0004_composite_pk_users.py
scripts/: create_admin.py
static/css/: admin.css
