[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-bot-23-02-2026"
version = "0.1.0"
description = "Telegram bot with FastAPI admin panel"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.17.0",
    "aiogram-fastapi-server==0.1.2",
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.18",
    "sqlalchemy==2.0.38",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic-settings==2.7.1",
    "bcrypt==4.0.1",
    "itsdangerous==2.2.0",
    "loguru==0.7.3",
    "aiofiles==24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bot", "admin", "core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
